docs: adiciona compilação e execução no README